--- a/ipynb/04a_Esercizi.ipynb
+++ b/ipynb/04a_Esercizi.ipynb
@@ -308,6 +308,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__15 - Trovate l'errore:__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prezzi = {\"prezzo_1\": 9.99, \"prezzo_2\": 13.48, \"prezzo_5\": 10.99, \"prezzo_44\": 15.01}\n",
+    "trovato = False\n",
+    "for key value in prezzi.items():\n",
+    "    if 10 <= value <= 14.99:\n",
+    "        print(key + \":\", value)\n",
+    "        trovato = True\n",
+    "\n",
+    "if not trovato:\n",
+    "    print(\"Non ci sono prezzi fra 10 euro e 14.99 euro\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Esercizi per i pomeriggi di pioggia"
    ]
   },
@@ -315,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__15 - Scrivere una funzione che stampi le prime N righe del triangolo di Pascal (coefficienti dello sviluppo binomiale) usando un metodo iterativo.__"
+    "__16 - Scrivere una funzione che stampi le prime N righe del triangolo di Pascal (coefficienti dello sviluppo binomiale) usando un metodo iterativo.__"
    ]
   },
   {
@@ -329,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__16 - Scrivere una funzione che stampi l'N-esima riga del triangolo di Pascal (coefficienti dello sviluppo binomiale) usando l'espressione analitica.__"
+    "__17 - Scrivere una funzione che stampi l'N-esima riga del triangolo di Pascal (coefficienti dello sviluppo binomiale) usando l'espressione analitica.__"
    ]
   },
   {
@@ -343,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__17 - Un filamento di DNA è una stringa formata dall'alfabeto 'A', 'C', 'G', and 'T' (Adenina, Citosina, Guanina, Timina).<br>\n",
+    "__18 - Un filamento di DNA è una stringa formata dall'alfabeto 'A', 'C', 'G', and 'T' (Adenina, Citosina, Guanina, Timina).<br>\n",
     "Data una stringa D di DNA corrispondente a un filamento di codice genetico, la sua trascrizione in una stringa R di RNA si ottiene rimpiazzando tutte le istanze di 'T' (Timina) in D con 'U'.<br>\n",
     "Costruite una funzione che, data una stringa D di DNA, contenente al più 1000 nucleotidi, restituisca la sua trascrizione in una stringa R di RNA.__<BR>\n",
     "__Testate la vostra funzione con il filamento CCAGTTCTGATTG.__"
@@ -360,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__18 - In una molecola di DNA, i simboli 'A' e 'T' sono complementari, come lo sono 'C' e 'G'. In altre parole, se in un filamento di DNA alla posizione N c'è 'A' ('C'), nel secondo filamento (complemento) alla posizione N c'e' sempre 'T' ('G') e viceversa.<br> \n",
+    "__19 - In una molecola di DNA, i simboli 'A' e 'T' sono complementari, come lo sono 'C' e 'G'. In altre parole, se in un filamento di DNA alla posizione N c'è 'A' ('C'), nel secondo filamento (complemento) alla posizione N c'e' sempre 'T' ('G') e viceversa.<br> \n",
     "Il complemento inverso SC di un filamento di DNA S si ottiene invertendo l'ordine dei simboli e poi sostituendo ciascun simbolo con il suo complemento. Per esempio il complemento inverso di \"GTCA\" è \"TGAC\".<br>\n",
     "Costruite una funzione che, data una stringa S di DNA, contenente al più 1000 nucleotidi, restituisca il suo complemento inverso SC?<br>\n",
     "Cosa succede se si inverte l'ordine delle operazioni, cioè prima si sostituisce ciascun simbolo con il suo complemento e poi si inverte l'ordine dei simboli?__"
@@ -377,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__19 - Scrivete una funzione per calcolare il Massimo Comun Divisore fra due interi usando l'algoritmo di Euclide (Cercatelo su Google.).__"
+    "__20 - Scrivete una funzione per calcolare il Massimo Comun Divisore fra due interi usando l'algoritmo di Euclide (Cercatelo su Google.).__"
    ]
   },
   {
@@ -391,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__20 - Scrivete una funzione che prende come input un intero e restituisca la somma delle sue cifre dispari.__\n",
+    "__21 - Scrivete una funzione che prende come input un intero e restituisca la somma delle sue cifre dispari.__\n",
     "\n",
     "__Test:__\n",
     "* Input: -131723\n",
@@ -409,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__21 - Scrivere una funzione che calcoli la somma di due numeri se entrambi sono interi, altrimenti restituisca un appropriato messaggio di errore.(Hint: cercate in rete informazioni sulla funzione intrinseca `isinstance` oppure usate `help(isinstance)`.)__"
+    "__22 - Scrivere una funzione che calcoli la somma di due numeri se entrambi sono interi, altrimenti restituisca un appropriato messaggio di errore.(Hint: cercate in rete informazioni sulla funzione intrinseca `isinstance` oppure usate `help(isinstance)`.)__"
    ]
   },
   {
@@ -423,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__22 - Scrivere una funzione che prenda come input una lista di interi e restituisca la lista degli elementi pari, nello stesso ordine in cui compaiono nella lista iniziale.__<BR>\n",
+    "__23 - Scrivere una funzione che prenda come input una lista di interi e restituisca la lista degli elementi pari, nello stesso ordine in cui compaiono nella lista iniziale.__<BR>\n",
     "\n",
     "__Sfida opzionale: Modificate la funzione in modo che se nella lista compare il numero 237, la funzione non restituisca nessuno dei numeri che seguono 237.__"
    ]
@@ -439,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__23 - Un anno è bisestile se:__ \n",
+    "__24 - Un anno è bisestile se:__ \n",
     "\n",
     "- Non è secolare, cioè non è divisibile per 100, ed è divisibile per 4.\n",
     "- È secolare ed è divisibile per 400.\n",
@@ -458,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__24 - La \"Congettura di Collatz\" è una congettura la cui validità nessuno è finora stato capace di provare o confutare. La si può descrivere così:__\n",
+    "__25 - La \"Congettura di Collatz\" è una congettura la cui validità nessuno è finora stato capace di provare o confutare. La si può descrivere così:__\n",
     "\n",
     "- Si prenda un numero intero intero positivo N\n",
     "- Se N è pari si divida N per 2\n",
@@ -480,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__25 - La funzione `all_equal` ([source](https://levelup.gitconnected.com/10-python-hacks-in-30s-1b86b0e91ff2)) verifica che tutti gli elementi di `lst` siano uguali. Spiegate l'algoritmo che utilizza.__"
+    "__26 - La funzione `all_equal` ([source](https://levelup.gitconnected.com/10-python-hacks-in-30s-1b86b0e91ff2)) verifica che tutti gli elementi di `lst` siano uguali. Spiegate l'algoritmo che utilizza.__"
    ]
   },
   {
@@ -505,7 +529,7 @@
     "tags": []
    },
    "source": [
-    "__26 - I numeri di Fibonacci sono una successione di numeri interi definita da__\n",
+    "__27 - I numeri di Fibonacci sono una successione di numeri interi definita da__\n",
     "$$ F(0) = 0,\\, F(1) = 1,\\, F(n) = F(n-1) + F(n-2) \\quad per\\,\\, n\\, >\\, 1.$$\n",
     "__I primi termini sono quindi 0, 1 , 1, 2, 3, 5, 8, ....__<BR>\n",
     "__Costruite una funzione `Fib(max)` che restituisca la lista dei numeri di Fibonacci minori o uguali a `max`.__<BR>\n",
@@ -537,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
