--- a/ipynb/13_Classi.ipynb
+++ b/ipynb/13_Classi.ipynb
@@ -1086,7 +1086,7 @@
    "metadata": {},
    "source": [
     "Introduciamo due classi (*Circle* and *Rectangle*), che estendono *Shape* e contengono gli attributi necessari per calcolare area e perimetroa. I metodi generici vengono sovrascritti per ottenere il risultato corretto.\n",
-    "L'attributo *name* viene inizializzato al volore voluto usando il costruttore super()."
+    "L'attributo *name* viene inizializzato al valore voluto usando il costruttore super()."
    ]
   },
   {
@@ -1167,7 +1167,7 @@
     }
    ],
    "source": [
-    "type(my_circle)      # perch&eacute; stampa __main__.Circle? "
+    "type(my_circle)      # perchè stampa __main__.Circle? "
    ]
   },
   {
@@ -1221,7 +1221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scriviamo una funzione *print_shape* che prende un esemplare di *Shape* e stampa il suo nome, l'area e il perimetro. Poi le pasiamo gli oggetti che abbiamo creato."
+    "Scriviamo una funzione *print_shape* che prende un esemplare di *Shape* e stampa il suo nome, l'area e il perimetro. Poi le passiamo gli oggetti che abbiamo creato."
    ]
   },
   {
@@ -1279,14 +1279,6 @@
     "Il notebook è ben strutturato per introdurre i concetti OOP. Ecco i miei suggerimenti di miglioramento:\n",
     "\n",
     "## Suggerimenti di miglioramento\n",
-    "\n",
-    "### 1. **Correzioni necessarie**\n",
-    "- Nell'esempio finale (Sezione 1.4, Esempio 5), ci sono errori di battitura:\n",
-    "  ```python\n",
-    "  print(f\"my_ircle area: {my_circle.area():.2f}, perimeter: {circle.perimeter():.2f}\")\n",
-    "  # dovrebbe essere my_circle invece di my_ircle e circle\n",
-    "  ```\n",
-    "- Le variabili `circle` e `rectangle` non sono definite ma vengono usate. Dovrebbero essere `my_circle` e `my_rectangle`.\n",
     "\n",
     "### 2. **Chiarimenti concettuali**\n",
     "- **super()**: Il commento \"super() va chiarito\" è corretto. Suggerirei di aggiungere una spiegazione:\n",
