--- a/ipynb/09_numpy_statistics.ipynb
+++ b/ipynb/09_numpy_statistics.ipynb
@@ -283,9 +283,9 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "nevent, bins, patches = ax.hist(dati, nbins, range=xrange)\n",
-    "ax.plot(np.ones(2)*media2, [0,nevent.max()+1], label=\"media\")\n",
-    "ax.plot(np.ones(2)*media2-deviazione_std2, [0,nevent.max()+1], label=\"media - $\\sigma$\")\n",
-    "ax.plot(np.ones(2)*media2+deviazione_std2, [0,nevent.max()+1], label=\"media + $\\sigma$\")\n",
+    "ax.plot(np.ones(2)*media, [0,nevent.max()+1], label=\"media\")\n",
+    "ax.plot(np.ones(2)*media-deviazione_std, [0,nevent.max()+1], label=\"media - $\\sigma$\")\n",
+    "ax.plot(np.ones(2)*media+deviazione_std, [0,nevent.max()+1], label=\"media + $\\sigma$\")\n",
     "ax.legend();"
    ]
   },
