--- a/ipynb/09_numpy_statistics.ipynb
+++ b/ipynb/09_numpy_statistics.ipynb
@@ -10,7 +10,7 @@
     "<UL>\n",
     "    <LI> Le funzioni statistiche fondamentali in Numpy\n",
     "    <LI> Come disegnare l'istogramma delle frequenze\n",
-    "    <LI> Come e perchè generare numeri casuali secondo una distribuzione data\n",
+    "    <LI> Come e perch&eacute; generare numeri casuali secondo una distribuzione data\n",
     "</UL>\n",
     "</div>\n",
     "\n",
@@ -19,7 +19,7 @@
     "        \n",
     "## Nozioni fondamentali\n",
     "La statistica ha un ruolo fondamentale in Fisica e in ogni campo scientifico a base sperimentale. Numpy fornisce tutti i metodi necessari per la manipolazione statistica dei dati. Affrontiamo questo argomento dopo aver introdotto Matplotlib perch&eacute;\n",
-    "la rappresentazione grafica dei dati &egrave; uno strumento estremamente utile.\n",
+    "la rappresentazione grafica dei dati &egrave; uno strumento indispensabile.\n",
     "\n",
     "<div style= 'padding:20px 20px 0px 150px;'>\n",
     "    <img src=\"../Humour/extrapolating1.png\" width=\"500\" align=\"center\"/>\n",
