--- a/ipynb/BinomialPoissonDistribution.ipynb
+++ b/ipynb/BinomialPoissonDistribution.ipynb
@@ -152,9 +152,9 @@
     "ax.set_xlabel('n')\n",
     "ax.set_ylabel('P(n)')\n",
     "ax.grid(axis='x')\n",
-    "ax.plot(t,PoissonVal(t,1),marker='o',c='r', linestyle = '--',label='$\\lambda$ = 1')\n",
-    "ax.plot(t,PoissonVal(t,4),marker='o',c='b', linestyle = '--',label='$\\lambda$ = 4')\n",
-    "ax.plot(t,PoissonVal(t,6),marker='o',c='g', linestyle = '--',label='$\\lambda$ = 6')\n",
+    "ax.plot(t,PoissonVal(t,1),marker='o',c='r', linestyle = '--',label=r'$\\lambda$ = 1')\n",
+    "ax.plot(t,PoissonVal(t,4),marker='o',c='b', linestyle = '--',label=r'$\\lambda$ = 4')\n",
+    "ax.plot(t,PoissonVal(t,6),marker='o',c='g', linestyle = '--',label=r'$\\lambda$ = 6')\n",
     "ax.legend();"
    ]
   },
@@ -286,12 +286,12 @@
     "print('Poisson Normalization:',np.sum(yP))\n",
     "\n",
     "fig1, ax1 = plt.subplots(figsize=(12, 5))\n",
-    "ax1.set_title('Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
+    "ax1.set_title(r'Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
     "ax1.set_xlabel('n')\n",
     "ax1.set_ylabel('P(n)')\n",
     "ax1.grid(axis='x')\n",
     "#leg1 = '$\\lambda$ ='+str(average_counts)\n",
-    "ax1.plot(t,yP,marker='o',c='b', linestyle = '--',label='$\\lambda$ ='+str(average_counts))\n",
+    "ax1.plot(t,yP,marker='o',c='b', linestyle = '--',label='r$\\lambda$ ='+str(average_counts))\n",
     "ax1.plot(t,yB,marker='o',c='k', linestyle = '--',label='Binomial(n,'+str(nuclei)+','+str(prob_decay)+')')\n",
     "#ax1.scatter(unique,counts,marker='o',c='g',label='data')\n",
     "ax1.plot(unique,counts,marker='o',c='g',label='data')\n",
@@ -346,7 +346,7 @@
     "print('Poisson Normalization:',np.sum(yP))\n",
     "\n",
     "fig1, ax1 = plt.subplots(figsize=(12, 5))\n",
-    "ax1.set_title('Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
+    "ax1.set_title(r'Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
     "ax1.set_xlabel('n')\n",
     "ax1.set_ylabel('P(n)')\n",
     "ax1.grid(axis='x')\n",
@@ -408,7 +408,7 @@
     "print('Poisson Normalization:',np.sum(yP))\n",
     "\n",
     "fig2, ax2 = plt.subplots(figsize=(12, 5))\n",
-    "ax2.set_title('Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
+    "ax2.set_title(r'Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
     "ax2.set_xlabel('n')\n",
     "ax2.set_ylabel('P(n)')\n",
     "ax2.grid(axis='x')\n",
@@ -468,13 +468,13 @@
    "outputs": [],
    "source": [
     "fig3, ax3 = plt.subplots(figsize=(12, 5))\n",
-    "ax3.set_title('Poisson distribution vs Gauss distribution for $\\lambda$ = 10')\n",
+    "ax3.set_title(r'Poisson distribution vs Gauss distribution for $\\lambda$ = 10')\n",
     "ax3.set_xlabel('n')\n",
     "ax3.set_ylabel('P')\n",
     "ax3.grid(axis='x')\n",
-    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label='Poisson $\\lambda$ =10')\n",
-    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label='Gauss_int $\\mu = 10$, $\\sigma = \\sqrt{10}$')\n",
-    "ax3.plot(t,yG,marker='o',c='g', linestyle = '--',label='Gauss $\\mu = 10$, $\\sigma = \\sqrt{10}$')\n",
+    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label=r'Poisson $\\lambda$ =10')\n",
+    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label=r'Gauss_int $\\mu = 10$, $\\sigma = \\sqrt{10}$')\n",
+    "ax3.plot(t,yG,marker='o',c='g', linestyle = '--',label=r'Gauss $\\mu = 10$, $\\sigma = \\sqrt{10}$')\n",
     "ax3.legend();"
    ]
   },
@@ -491,12 +491,12 @@
     "yP = PoissonVal(t,lam)\n",
     "\n",
     "fig3, ax3 = plt.subplots(figsize=(12, 5))\n",
-    "ax3.set_title('Poisson distribution vs Gauss distribution for $\\lambda$ = 20')\n",
+    "ax3.set_title(r'Poisson distribution vs Gauss distribution for $\\lambda$ = 20')\n",
     "ax3.set_xlabel('n')\n",
     "ax3.set_ylabel('P')\n",
     "ax3.grid(axis='x')\n",
-    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label='Poisson $\\lambda$ =20')\n",
-    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label='Gauss $\\mu = 20$, $\\sigma = \\sqrt{20}$')\n",
+    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label=r'Poisson $\\lambda$ =20')\n",
+    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label=r'Gauss $\\mu = 20$, $\\sigma = \\sqrt{20}$')\n",
     "ax3.legend();"
    ]
   },
@@ -513,12 +513,12 @@
     "yP = PoissonVal(t,lam)\n",
     "\n",
     "fig3, ax3 = plt.subplots(figsize=(12, 5))\n",
-    "ax3.set_title('Poisson distribution vs Gauss distribution for $\\lambda$ = 30')\n",
+    "ax3.set_title(r'Poisson distribution vs Gauss distribution for $\\lambda$ = 30')\n",
     "ax3.set_xlabel('n')\n",
     "ax3.set_ylabel('P')\n",
     "ax3.grid(axis='x')\n",
-    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label='Poisson $\\lambda$ =30')\n",
-    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label='Gauss $\\mu = 30$, $\\sigma = \\sqrt{30}$')\n",
+    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label=r'Poisson $\\lambda$ =30')\n",
+    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label=r'Gauss $\\mu = 30$, $\\sigma = \\sqrt{30}$')\n",
     "ax3.legend();"
    ]
   },
@@ -535,12 +535,12 @@
     "yP = PoissonVal(t,lam)\n",
     "\n",
     "fig3, ax3 = plt.subplots(figsize=(12, 5))\n",
-    "ax3.set_title('Poisson distribution vs Gauss distribution for $\\lambda$ = 100')\n",
+    "ax3.set_title(r'Poisson distribution vs Gauss distribution for $\\lambda$ = 100')\n",
     "ax3.set_xlabel('n')\n",
     "ax3.set_ylabel('P')\n",
     "ax3.grid(axis='x')\n",
-    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label='Poisson $\\lambda$ =100')\n",
-    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label='Gauss $\\mu = 100$, $\\sigma = \\sqrt{100}$')\n",
+    "ax3.plot(t,yP,marker='o',c='b', linestyle = '--',label=r'Poisson $\\lambda$ =100')\n",
+    "ax3.plot(t,yGint,marker='o',c='r', linestyle = '--',label=r'Gauss $\\mu = 100$, $\\sigma = \\sqrt{100}$')\n",
     "ax3.legend();"
    ]
   },
@@ -757,12 +757,12 @@
     "print('Poisson Normalization:',np.sum(yP))\n",
     "\n",
     "fig2, ax2 = plt.subplots(figsize=(12, 5))\n",
-    "ax2.set_title('Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
+    "ax2.set_title(r'Poisson distribution vs data for $\\lambda$ ='+str(average_counts))\n",
     "ax2.set_xlabel('n')\n",
     "ax2.set_ylabel('P(n)')\n",
     "ax2.grid(axis='x')\n",
     "#leg1 = '$\\lambda$ ='+str(average_counts)\n",
-    "ax2.plot(t,yP,marker='o',c='b', linestyle = '--',label='$\\lambda$ ='+str(average_counts))\n",
+    "ax2.plot(t,yP,marker='o',c='b', linestyle = '--',label=r'$\\lambda$ ='+str(average_counts))\n",
     "ax2.plot(t1,yB,marker='x',markersize=15, c='k', linestyle = '--',label='Binomial(n,'+str(nuclei)+','+str(prob_decay)+')')\n",
     "ax2.plot(unique,counts,marker='o', c='g',label='data')\n",
     "ax2.legend();"
