--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -1023,9 +1023,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il metodo `bisect()` richiede obbligatoriamente tre argomenti: (i) la funzione *f(x)*, (ii) il limite inferiore *a* (che abbiamo scelto uguale a 1.5 nell'esempio) e (ii) il limite superiore *b* (scelto uguale a 3)  dell'intervallo in cui eseguire la procedura. Il parametro opzionale `xtol` determina l'errore massimo del metodo.\n",
+    "Il metodo `bisect()` richiede obbligatoriamente tre argomenti: (i) la funzione `f(x)`, (ii) il limite inferiore `a` (che abbiamo scelto uguale a 1.5 nell'esempio) e (ii) il limite superiore `b` (scelto uguale a 3)  dell'intervallo in cui eseguire la procedura. Il parametro opzionale `xtol` determina l'errore massimo del metodo.\n",
     "\n",
-    "Uno dei presupposti del metodo di bisezione &egrave; che l'intervallo \\[*a*, *b*\\] sia scelto in modo tale che la funzione abbia in *a* segno opposto a quello che ha in *b* in modo che nell'intervallo, se la funzione &egrave; continua, cada almeno una radice."
+    "Uno dei presupposti del metodo di bisezione &egrave; che l'intervallo \\[`a`, `b`\\] sia scelto in modo tale che la funzione abbia in `a` segno opposto a quello che ha in `b` in modo che nell'intervallo, se la funzione &egrave; continua, cada almeno una radice."
    ]
   },
   {
@@ -1113,10 +1113,10 @@
    "source": [
     "## Ottimizzazione ovvero trovare minimi (e massimi)\n",
     "\n",
-    "Spesso &egrave; necessario trovare il minimo o il massimo di una particolare funzione *f(x)* dove *f* &egrave; una funzione scalare mentre *x* pu&ograve; essere un vettore. Applicazioni tipiche sono la minimizzazione di quantit&agrave; come il costo, il rischio o l'errore, oppure la massimizzazione della produttivit&agrave;, efficienza o profitto. Le routines di ottimizzazione tipicamente forniscono un metodo per minimizzare una funzione data: per massimizzare *f(x)* è sufficiente minimizzare *g(x)= − f(x)*.\n",
+    "Spesso &egrave; necessario trovare il minimo o il massimo di una particolare funzione `f(x)` dove `f` &egrave; una funzione scalare mentre `x` pu&ograve; essere un vettore. Applicazioni tipiche sono la minimizzazione di quantit&agrave; come il costo, il rischio o l'errore, oppure la massimizzazione della produttivit&agrave;, efficienza o profitto. Le routines di ottimizzazione tipicamente forniscono un metodo per minimizzare una funzione data: per massimizzare `f(x)` è sufficiente minimizzare `g(x)= − f(x)`.\n",
     "\n",
-    "Di seguito, un esempio che mostra (i) la definizione della funzione *f(x)* da minimizzare e (ii) la chiamata a `scipy.optimize.fmin` a cui vengono passati la funzione *f* da minimizzare e un valore iniziale *x*<sub>0</sub> da cui partire per la ricerca del minimo, e che restituisce il valore *x* per cui *f(x)* ha un minimo locale. Tipicamente, la ricerca del minimo &egrave; locale, nel senso che l'algoritmo segue il gradiente (derivata multidimensionale) nel punto in cui si trova. \n",
-    "Facciamo come prima cosa il grafico della funzione. Il plot suggerisce che i due minimi pi&ugrave; a destra possono essere cercati partendo dai due punti *x*<sub>0</sub> = 1.0 e *x*<sub>0</sub> = 2.0. "
+    "Di seguito, un esempio che mostra (i) la definizione della funzione `f(x)` da minimizzare e (ii) la chiamata a `scipy.optimize.fmin` a cui vengono passati la funzione `f` da minimizzare e un valore iniziale `x0` da cui partire per la ricerca del minimo, e che restituisce il valore `xm` per cui `f(x)` ha un minimo. Tipicamente, la ricerca del minimo &egrave; locale, nel senso che l'algoritmo segue il gradiente (derivata multidimensionale) nel punto in cui si trova e non esplora tutto il range della funzione. \n",
+    "Facciamo come prima cosa il grafico della funzione. Il plot suggerisce che i due minimi pi&ugrave; a destra possono essere cercati partendo dai due punti `x0 = 1.0` e `x1 = 2.0`. "
    ]
   },
   {
@@ -1233,11 +1233,13 @@
     "\n",
     "Scipy fornisce una funzione piuttosto flessibile (basato sull'algoritmo di Levenburg-Marquardt), `scipy.optimize.curve_fit`, per interpolare un set di dati. L'assunzione &egrave; che vengano dati un set di punti\n",
     "$x_1, x_2,\\cdots,x_N$, i corrispondenti valori $y_i$ e una dipendenza funzionale $y=f(x,\\vec{p})$.\n",
-    "Per fare un esempio, il numero di atomi non decaduti in un campione di una sostanza radioattiva segue la legge\n",
-    "$$ N(t,N_0,\\tau) = N_0\\,\\exp\\left(-\\frac{t}{\\tau}\\right).$$\n",
     "Si vuole determinare i parametri $\\vec{p}=(p_1, p_2, \\ldots,p_k)$ in modo che $r$, la somma degli scarti quadratici fra la curva e i dati, sia la pi&ugrave; piccola possibile:\n",
     "\n",
     "$$r = \\sum\\limits_{i=1}^N \\left(y_i - f(x_i, \\vec{p})\\right)^2$$\n",
+    "\n",
+    "Per fare un esempio, il numero di atomi non decaduti in un campione di una sostanza radioattiva segue la legge\n",
+    "$$ N(t,N_0,\\tau) = N_0\\,\\exp\\left(-\\frac{t}{\\tau}\\right)$$\n",
+    "dove $N_0$ e $\\tau$ sono i parametri che vogliamo determinare dalla misura dei decadimenti.\n",
     "\n",
     "Questo approccio &egrave; particolarmente utile quando i dati sono affetti da *rumore*: per ogni coppia $x_i,y_i$ &egrave; presente un termine di errore (ignoto) $\\epsilon_i$, tale che $y_i=f(x_i,\\vec{p})+\\epsilon_i$.\n",
     "\n",
