--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -1143,7 +1143,7 @@
     "ax.set_xlim(-5., 5.)\n",
     "ax.set_ylim(-2.2, 0.5)\n",
     "\n",
-    "ax.plot(x, y, label='$\\cos(x)-3e^{-(x-0.2)^2}$')"
+    "ax.plot(x, y, label=r'$\\cos(x)-3e^{-(x-0.2)^2}$')"
    ]
   },
   {
@@ -1175,7 +1175,7 @@
     "ax.set_xlim(-5.,5.)\n",
     "ax.set_ylim(-2.2,0.5)\n",
     "\n",
-    "ax.plot(x, y, label='$\\cos(x)-3e^{-(x-0.2)^2}$')\n",
+    "ax.plot(x, y, label=r'$\\cos(x)-3e^{-(x-0.2)^2}$')\n",
     "# add minimum1 to plot\n",
     "ax.scatter(minimum1, f(minimum1), marker='v', c='r', label='minimum 1')\n",
     "# add start1 to plot\n",
@@ -1281,8 +1281,8 @@
     "#plot\n",
     "import matplotlib.pyplot as plt\n",
     "fig, ax = plt.subplots(figsize=(6, 4))\n",
-    "ax.scatter(x, yi, marker='o', label='data $y_i$')\n",
-    "ax.plot(x, yfitted, c='r', label='fit $f(x_i)$')\n",
+    "ax.scatter(x, yi, marker='o', label=r'data $y_i$')\n",
+    "ax.plot(x, yfitted, c='r', label=r'fit $f(x_i)$')\n",
     "ax.set_xlabel('x')\n",
     "ax.legend()"
    ]
