--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -489,18 +489,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.linspace(-2, 2, 101)\n",
-    "y = vf(x)\n",
-    "res2 = trapezoid(y, x)\n",
-    "res2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -641,7 +629,7 @@
     "Per risolvere  equazioni  differenziali ordinarie del tipo\n",
     "$$\\frac{\\mathrm{d}y}{\\mathrm{d}t}(t) = f(y,t)$$\n",
     "\n",
-    "con condizione iniziale $y(t_0)=y_0$, oppure un sistema di equazioni tali equazioni, si pu&ograve; usare la  funzione `odeint` di `scipy`. Ecco un esempio (`useodeint.py`) per determinare la soluzione \n",
+    "con condizione iniziale $y(t_0)=y_0$, oppure un sistema di tali equazioni, si pu&ograve; usare la  funzione `odeint` di `scipy`. Ecco un esempio (`useodeint.py`) per determinare la soluzione \n",
     "$y(t)$, per $t$ nell'intervallo $[0,2]$\n",
     "dell'equazione  differenziale:\n",
     "$$\\frac{\\mathrm{d}y}{\\mathrm{d}t}(t) = -2yt$$\n",
